sample/hello-world-again.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hello-world-again
  namespace: hello-world-again
  labels:
    app: hello-world
spec:
  replicas: 1
  selector:
    matchLabels:
      app: hello-world
  template:
    metadata:
      labels:
        app: hello-world
    spec:
      containers:
        - name: hello-world
          image: nginxdemos/hello:latest
          ports:
            - containerPort: 80

---
apiVersion: v1
kind: Service
metadata:
  name: hello-world-service
  namespace: hello-world-again
  labels:
    app: hello-world
spec:
  selector:
    app: hello-world
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: LoadBalancer
